# watsonx-mcp-server

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md  batch-processor.js  demo-external-drive.sh  document-analyzer.js  embedding-index.js  embeddings-index.json  index.js  package-lock.json  package.json  test-tools.js  test-watsonx.js
batch-results/: classify-1765765720041.json  full-analysis-1765765676586.json
site/: index.html  style.css
src/: main.rs
