[package]
name = "watsonx-mcp-server"
version = "0.1.0"
edition = "2024"
description = "MCP server for IBM watsonx.ai and IBM Z -- 10 tools for text generation, chat, embeddings, model listing, Key Protect, z/OS Connect"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
